- Based on the review comments using different color for the images - extra.mp4 is now more stable. - TODO: detect curves on the lanes

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -210,6 +210,7 @@
     "        self.set_line_thickness()\n",
     "        self.set_extrapolate()\n",
     "        self.set_line_color()\n",
+    "        self._set_cvt_color()\n",
     "        \n",
     "    def set_debug(self):\n",
     "        \"\"\"\n",
@@ -242,7 +243,7 @@
     "        self._color = color\n",
     "\n",
     "    def set_hough_line_thresholds(self, rho=1, theta=np.pi/180,\n",
-    "                                  threshold=1, min_line_length=10, max_line_gap=1):\n",
+    "                                  threshold=30, min_line_length=80, max_line_gap=110):\n",
     "        \"\"\"\n",
     "        Define the Hough transform parameters\n",
     "        \"\"\"\n",
@@ -252,7 +253,7 @@
     "        self._min_line_length = min_line_length\n",
     "        self._max_line_gap = max_line_gap\n",
     "        \n",
-    "    def set_canny_thresholds(self, kernel_size=7, low_threshold=60, high_threshold=180):\n",
+    "    def set_canny_thresholds(self, kernel_size=5, low_threshold=50, high_threshold=150):\n",
     "        \"\"\"\n",
     "        Define the Canny parameters\n",
     "        \"\"\"\n",
@@ -294,6 +295,20 @@
     "            return\n",
     "        \n",
     "        self.set_line_thickness(thickness=3)\n",
+    "        \n",
+    "    def _set_cvt_color(self, cvt_color = cv2.COLOR_RGB2Lab):\n",
+    "        \"\"\"\n",
+    "        post trying through all the colors, found which works\n",
+    "        across the images and videos\n",
+    "\n",
+    "        cv2.COLOR_RBG2HSV\n",
+    "        cv2.COLOR_RBG2HLS\n",
+    "        cv2.COLOR_RGB2\n",
+    "        cv2.COLOR_YCrCb\n",
+    "        cv2.COLOR_Luv\n",
+    "        cv2.COLOR_Lub\n",
+    "        \"\"\"\n",
+    "        self._cvt_color = cvt_color\n",
     "    \n",
     "    def get_line_color(self):\n",
     "        \"\"\" Get the current color that needs to be set \"\"\"\n",
@@ -333,6 +348,9 @@
     "        \"\"\" Returns True to extrapolate lines on lanes else False \"\"\"\n",
     "        return self._extrapolate\n",
     "    \n",
+    "    def get_cvt_color(self):\n",
+    "        return self._cvt_color\n",
+    "    \n",
     "prj_globals = Globals()"
    ]
   },
@@ -354,7 +372,8 @@
     "    but NOTE: to see the returned image as grayscale\n",
     "    (assuming your grayscaled image is called 'gray')\n",
     "    you should call plt.imshow(gray, cmap='gray')\"\"\"\n",
-    "    return cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
+    "    return cv2.cvtColor(img, prj_globals.get_cvt_color())\n",
+    "    # return cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
     "    # Or use BGR2GRAY if you read an image with cv2.imread()\n",
     "    # return cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "    \n",
@@ -620,7 +639,7 @@
     "        if prj_globals.is_debug():\n",
     "            plt.imshow(gray, cmap='gray')\n",
     "            plt.show()\n",
-    "    \n",
+    "\n",
     "        # not the the image has been converted into grey scale, get \n",
     "        # edges from the images. Use canny edge algorightm. Appy gausian\n",
     "        # blur before applying the canny edge detection.\n",
@@ -910,19 +929,6 @@
    "outputs": [],
    "source": [
     "prj_globals.reset()\n",
-    "\n",
-    "# Lower the canny thresholds as detection of lane did not happen on \n",
-    "# the cement patch post the shadows of trees.\n",
-    "prj_globals.set_canny_thresholds(low_threshold = 20, high_threshold = 40)\n",
-    "\n",
-    "#\n",
-    "# As the canny thresholds have been lowered, the hough line thresholds have\n",
-    "# been increased. This made sure the remove noise during the shadow patches\n",
-    "#\n",
-    "prj_globals.set_hough_line_thresholds(threshold = 0, min_line_length = 30, max_line_gap = 5)\n",
-    "\n",
-    "# tuning history limit\n",
-    "prj_globals.set_history_limit(history = 40)\n",
     "\n",
     "challenge_output = 'extra.mp4'\n",
     "clip2 = VideoFileClip('challenge.mp4')\n",
